<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_order"
        android:title="@string/title_order"/>

    <item
        android:id="@+id/navigation_jjim"
        android:icon="@drawable/ic_jjim"
        android:title="@string/title_jjim"/>

</menu>